--- a/iDM-freze-out/iDM freeze-out-integration.ipynb
+++ b/iDM-freze-out/iDM freeze-out-integration.ipynb
@@ -1124,6 +1124,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a4c1b2e2",
+   "metadata": {},
+   "source": [
+    "# 21/12/2022 THIS IS THE CORE FILE\n",
+    "## What I have done:\n",
+    "## There are other four notebook that are \"Coannihilation\", \"Scattering\", \"Decay\" and \"Scalar-coannihilation\". The first one is the most important. There I have made some assumptions. I choose a range of x, from that range I have computed the range of temperatures (T), and from that I have computed a range of energies of the centre of mass where the coannihilation process mediated by the dark photon can occur. Then I have plotted the scross section and that seemed to be constant, so I have picked a value for it that could work as a $\\sigma_0$ in the computation of $x_f$ taken from Kolb-Turner. In that way I got the freeze out temperatures for the two spieces. I have used just the coannihilation cross section for computed the freeze out temperatures, and then used those values for all the other notebooks. After having done that, I have performed the thermal average cross section times velocity computation separately in each notebook and I got a result for them to plug into my Boltzmann differential equation. After integrating it and got the plot I have computed the relic abundance for the Benchmark choosen.\n",
+    "# ALL OF IT IS WRONG.\n",
+    "## The Kolb-Turner formula do not apply to our case of iDM. So I have insert all the formula for the thermal average cross section times velocity ($\\langle \\sigma v \\rangle$) including the integral in $ds$ (that depend on the temperature) in my Boltzmann differential equation and it works. It plot and solve the coupled differential equations(in 40 min).In this way I do not have to make any kind of assumption on the energy range or on the cross section, it's pretty formal. For the moment are inside just the coannihilation and the scattering, I am still giving a sharp value for the decay.\n",
+    "# What I need to do more:\n",
+    "## Modify the cross section given into the integral and make them unpolarized (sum over the possible final states and average on the initial ones).\n",
+    "## Ending up the analytical form of the decay cross section.\n",
+    "## Plug inside the scalar coannihilation cross section. What values do I need to insert in the cross section for the parameters? ($\\Delta_\\phi$, $Y^\\chi$....)\n",
+    "## Modify again the Boltzmann equation for adding tha scalar coannihilation term. The scalar interaction is diagonal, while the vector interaction is off-diagonal, so it consist in the addition of a totally new term in the differential equation.\n",
+    "## Check all the little parameter values (i.e. $g_*$...)\n",
+    "## Check if the differential equation is correct (python is not so easy for that kind of stuff). And I am using in the integration a variable \"t\" that probably is x1, but then I plot in x2, is it still correct?\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "id": "38e803cb",
@@ -1222,7 +1241,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Tfo2=0.002831671668678899"
+    "Tfo2=0.002831671668678899\n",
+    "# THIS IS JUST TO TEST THET THE SIGMA ARE WRITTEN WELL AND THAT I GET THE SAME RESULT\n",
+    "# THAT I GET IN THE OTHER NOTEBOOKS"
    ]
   },
   {
