--- a/iDM-freze-out/iDM freeze-out-integration_unpolarized.ipynb
+++ b/iDM-freze-out/iDM freeze-out-integration_unpolarized.ipynb
@@ -1730,11 +1730,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbbd6867",
+   "id": "f3b26eaa",
    "metadata": {},
    "source": [
     "# UPDATE 01/01/2023\n",
-    "#### $$\\Big[\\frac{s}{H}\\Big] \\frac{\\langle \\sigma v \\rangle}{x}= \\Big[\\frac{2 \\pi^2}{45}g_{*s}T^3 \\Big(\\frac{8}{3}\\pi G \\rho \\Big)^{-1/2} \\Big]\\frac{\\langle \\sigma v \\rangle}{x}= \n",
+    "#### $$ \\Big[\\frac{s}{H}\\Big] \\frac{\\langle \\sigma v \\rangle}{x}= \\Big[\\frac{2 \\pi^2}{45}g_{*s}T^3 \\Big(\\frac{8}{3}\\pi G \\rho \\Big)^{-1/2} \\Big]\\frac{\\langle \\sigma v \\rangle}{x}= \n",
     "    \\Big[\\frac{2 \\pi^2}{45}g_{*s}T^3 \\Big(\\frac{8}{3}\\pi \\frac{1}{m_{Pl}^2} \\frac{\\pi^2}{30}g_* T^4 \\Big)^{-1/2}\\Big] \\frac{\\langle \\sigma v \\rangle}{x} \\frac{m}{m}=\n",
     "    \\Big[\\Big(\\frac{2025}{4 \\pi^4} \\frac{1}{g_{*s}^2T^6} \\frac{8}{3}\\pi \\frac{1}{m_{Pl}^2} \\frac{\\pi^2}{30}g_* T^4 \\Big)^{-1/2}\\Big] \\frac{\\langle \\sigma v \\rangle}{x} \\frac{m}{m}=\n",
     "    - \\Big( \\frac{45}{\\pi m_{Pl}^2} \\Big)^{-1/2} \\frac{g_*^{1/2}m}{x^2} \\langle \\sigma v \\rangle  $$\n",
@@ -2208,8 +2208,8 @@
    "metadata": {},
    "source": [
     "# Update 01/01/2023\n",
-    "# I have pluggetd my own cross section and made the unpolarized too, in ALL of them, normal coannihilation, scalar coannihilation, scattering. The modification have been done in the sigma function of all of them.\n",
-    "# NOTE: for the dark photon I have also changed the factor of two in front of everithing and the factor two on the last term of masses"
+    "# I have pluggetd my own cross section and made the unpolarized too (1/4), in ALL of them, vector coannihilation, scalar coannihilation, scattering. The modification have been done in the sigma function of all of them.\n",
+    "# NOTE: for the vector coannihilation I have also changed the factor of two in front of everithing and the factor two on the last term of masses (To make my own cross section) and insert the possibilty to go into muons too instead of just electrons. This has been done by inserting a new cross section inside of \"sigma\" with $mmu$ insead of simple $m$"
    ]
   },
   {
