--- a/iDM-freze-out/iDM freeze-out-integration_unpolarized.ipynb
+++ b/iDM-freze-out/iDM freeze-out-integration_unpolarized.ipynb
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b26eaa",
+   "id": "7940a62e",
    "metadata": {},
    "source": [
     "# UPDATE 01/01/2023\n",
@@ -2210,6 +2210,21 @@
     "# Update 01/01/2023\n",
     "# I have pluggetd my own cross section and made the unpolarized too (1/4), in ALL of them, vector coannihilation, scalar coannihilation, scattering. The modification have been done in the sigma function of all of them.\n",
     "# NOTE: for the vector coannihilation I have also changed the factor of two in front of everithing and the factor two on the last term of masses (To make my own cross section) and insert the possibilty to go into muons too instead of just electrons. This has been done by inserting a new cross section inside of \"sigma\" with $mmu$ insead of simple $m$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3fc2ca7",
+   "metadata": {},
+   "source": [
+    "# UPDATE 01/01/2023\n",
+    "## I have to consider u,d,s quarks too, and I am going to multiply the muon cross section for R(s) the rate of hadron cross section on muon cross section. Summarizing as follows:\n",
+    "### $$ (\\sigma v)_{full}= (\\sigma v)_{e^+e^-} \\theta (s-4m_e^2) +(\\sigma v)_{\\mu^+ \\mu^-}[\\theta (s-4 m_\\mu^2)+ \\theta (s -4 m_\\pi^2)R(s) ] $$\n",
+    "## BUT following the computation done in \"Coannihilation\" regarding the centre of mass energy of the bath, with the masses choosen and the pick of x values the mass of the pion in the centre of mass is never reached, so we can stay with the approximation:\n",
+    "### $$ (\\sigma v)_{full}= (\\sigma v)_{e^+e^-} \\theta (s-4m_e^2) +(\\sigma v)_{\\mu^+ \\mu^-} \\theta (s-4 m_\\mu^2) $$\n",
+    "## To be completely fair, the CM energy of the mass of the muon is not reached too in principle from the computations, but they can be wrong.. Anyway the muon can be produced but at a certain point this channel is no longer available and the sigma coannihilation should change again, but I didn't succed on inserting the theta of Heaviside that depends on the CM energy in the coannihilation function\n",
+    "## GORDAN INSERT THE HADRONS CROSS SECTION ONLY IN THE PAPER IN WHICH m1=10 GeV  and $\\Delta= $ 0.2 m1 in which is reasonable to have muon ond hadrons productions, but in this case the muon are not reachable.. (anyway with the addition of the muon cross section it works incredibly good)... So what to do?\n",
+    "# Probably adding the muon cross section too is wrong, but works..."
    ]
   },
   {
