--- a/iDM-freze-out/relevant-codes/iDM_yes_hadrons_no_scalar.ipynb
+++ b/iDM-freze-out/relevant-codes/iDM_yes_hadrons_no_scalar.ipynb
@@ -17,11 +17,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fcad3d6",
+   "id": "d62ff395",
    "metadata": {},
    "source": [
     "# UPDATE 05/01/2023\n",
     "# This is the standard just dark photon mediated complete file for $m_1=0.05$ GeV and $\\delta=0.3 m_1$. WHITOUT THE DARK SCALAR INTERACTION, SO EXACLTY CORDAN COMPUTATION A PART FOR THE 2s staff..\n",
+    "### Actually gordan add hadrons cross section just in the m1=10 GeV\n",
     "# Means: there are my factor 2s in the coannihilation cross section with the dark photon, there is the cross section in muon (again just in the coannihilation cross section, nut probably should not be there) and the 1/4 factors to unpolarize the cross section"
    ]
   },
@@ -1215,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "9dd3d8f7",
+   "id": "6b49c3c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1929,7 +1930,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "952432e5",
+   "id": "3e5a132a",
    "metadata": {},
    "outputs": [],
    "source": [
