--- a/iDM-freze-out/relevant-codes/iDM_yes_hadrons_no_scalar.ipynb
+++ b/iDM-freze-out/relevant-codes/iDM_yes_hadrons_no_scalar.ipynb
@@ -1213,6 +1213,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b67c793",
+   "metadata": {},
+   "source": [
+    "# UPDATE 05/01/2023\n",
+    "### The cross section I was plotting just with epsilon wa sgordan's but not our... So I have changed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4cbd65cd",
    "metadata": {},
    "source": [
