--- a/iDM-freze-out/relevant-codes/iDM-fo-interaction-vertex-Nico.ipynb
+++ b/iDM-freze-out/relevant-codes/iDM-fo-interaction-vertex-Nico.ipynb
@@ -1335,29 +1335,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "60dba684",
+   "execution_count": 148,
+   "id": "1405fc52",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.955355775753669e-10"
+       "4.955353311476513e-07"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "front_factor= (np.cos(beta)*np.cos(theta_W)*np.tan(chi))*2*((np.cos(beta)**2)/(np.cos(chi)**2))*(d_V_l)**2\n",
+    "front_factor= (2*((np.cos(beta)**2)/(np.cos(chi)**2))*(d_V_l)**2)#*(np.cos(beta)*np.cos(theta_W)*np.tan(chi))\n",
     "front_factor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 149,
    "id": "0cd4c894",
    "metadata": {},
    "outputs": [],
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 150,
    "id": "008a65f1",
    "metadata": {},
    "outputs": [],
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 151,
    "id": "a8e3c921",
    "metadata": {},
    "outputs": [],
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 152,
    "id": "99eda2f3",
    "metadata": {},
    "outputs": [
@@ -1412,7 +1412,7 @@
        "4.3106857541449335e-23"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 153,
    "id": "5193d509",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1435,7 @@
        "1.563993475866895e+17"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 154,
    "id": "21fe4ecf",
    "metadata": {},
    "outputs": [],
@@ -1480,17 +1480,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 155,
    "id": "30e133d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x12e7299d0>]"
+       "[<matplotlib.lines.Line2D at 0x12e6c7730>]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 156,
    "id": "fb5850ee",
    "metadata": {},
    "outputs": [],
