--- a/iDM-freze-out/relevant-codes/README
+++ b/iDM-freze-out/relevant-codes/README
@@ -2,3 +2,13 @@
 ## iDM_yes_hadrons_no_scalar.ipynb ----> THIS IS NOT ANYMORE WITH THE EPSILON**2, BUT WITH THE d_V^f AND THE OTHER RELVANT PARAMETHERS.
 
 ##iDM_yes_hadrons_no_scalar_modified.ipynb ---->  INSTEAD THIS DIFFERENT FROM THE NON MODIFIED ONE BECAUSE I HAVE NOTICE THAT THE BOLTZMANN EQUATION IS INCORRECT WRITTEN DOWN IN THAT WAY. THE DECAY THERMAL AVERAGE CROSS SECTION HAS JUST (1/H) INSTEAD OF (S/H) AST THE OTHERS, AND MOREOVER THAT DEPENDS ON THE TEMPERATURE, SO I HAVE CHANGED IT. MOREOVER THERE IS ALSO TO MODIFY THE SCATTERING PART. IS THE Y_f^(0) THE EQUILIBRIUM DISTRIBUTION OF THE EELCTRON? IF SO I NEED TO MODIFY IT!!!!!!
+
+##iDM_yes_hadrons_no_scalar_modified_electron_equilibrium.ipynb -----> Should be the correct one finally
+
+
+BUT
+
+## IN OUR MODEL PROBABLY THERE IS A FACTOR MORE... WHEN EXPANDING THE INTERACTION TERMS THERE IA A PREFACTOR OF COS (BETA), COS (W) AND TAN (CHI)....
+## THOSE SHOUD BE ADDED IN THE INTERACTION TERM? 
+IF d_V^f is without them is something prop to 10E-7
+IF d_V^f is with them is something prop to 10E-10
