--- a/iDM-freze-out/relevant-codes/iDM_yes_hadrons_yes_scalar.ipynb
+++ b/iDM-freze-out/relevant-codes/iDM_yes_hadrons_yes_scalar.ipynb
@@ -1993,7 +1993,30 @@
     "    #dY1dt= -k*m1*(Y1*Y2-Yequil(t,m1)*Yequil(t2,m2))/t2**2 + ks*m1*Yequil(t,m1)*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)/t2**2 + t2*kd*m1*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)\n",
     "    #dY2dt= -k*m2*(Y1*Y2-Yequil(t,m1)*Yequil(t2,m2))/t2**2 - ks*m2*Yequil(t2,m2)*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)/t2**2 - t2*kd*m2*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)\n",
     "    \n",
-    "    return [-(quantity*(integrate.quad(lambda s_tilda: sigma(s_tilda)* (s_tilda-s0)* np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*( 1/(8* m1**2 * m2**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )*(Y1*Y2-Yequil(t,m1)*Yequil(t2,m2))/t**2   -(quantity*(integrate.quad(lambda s_tilda: sigma_SCALAR(s_tilda,m,m1)* (s_tilda-s0)* np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*( 1/(8* m1**2 * m2**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )*(Y1**2-Yequil(t,m1)*Yequil(t,m1))/t**2     + ((quantity*(integrate.quad(lambda s_tilda: sigma_SCAT(s_tilda)* (s_tilda-s0_SCAT)* np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0_SCAT, np.inf )[0])*( 1/(8* m1**2 * mf**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,mf/(m1/t)))))) )) *Yequil(t,m1)*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)/t**2 + t*kd*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1),    -(quantity*(integrate.quad(lambda s_tilda: sigma(s_tilda)* (s_tilda-s0)* np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*( 1/(8* m1**2 * m2**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )*(Y1*Y2-Yequil(t,m1)*Yequil(t2,m2))/t**2       -(quantity*(integrate.quad(lambda s_tilda: sigma_SCALAR(s_tilda,m,m2)* (s_tilda-s0)* np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*( 1/(8* m1**2 * m2**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )*(Y2**2-Yequil(t2,m2)*Yequil(t2,m2))/t**2       -(quantity*(integrate.quad(lambda s_tilda: sigma_SCAT(s_tilda)* (s_tilda-s0_SCAT)* np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0_SCAT, np.inf )[0])*( 1/(8* m1**2 * mf**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,mf/(m1/t)))))) ) *Yequil(t2,m2)*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)/t**2 - t*kd*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)]       \n",
+    "    return [-(quantity*(integrate.quad(lambda s_tilda: sigma(s_tilda)* (s_tilda-s0)* np.sqrt(s_tilda)*\n",
+    "                special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*( 1/(8* m1**2 * m2**2  *(m1/t) \n",
+    "                *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )*(Y1*Y2-Yequil(t,m1)*Yequil(t2,m2))/t**2  \n",
+    "                -(quantity*(integrate.quad(lambda s_tilda: sigma_SCALAR(s_tilda,m,m1)* (s_tilda-s0)*\n",
+    "                np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*\n",
+    "                ( 1/(8* m1**2 * m2**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )\n",
+    "                *(Y1**2-Yequil(t,m1)*Yequil(t,m1))/t**2     \n",
+    "                + ((quantity*(integrate.quad(lambda s_tilda: sigma_SCAT(s_tilda)* (s_tilda-s0_SCAT)*\n",
+    "                np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0_SCAT, np.inf )[0])*\n",
+    "                ( 1/(8* m1**2 * mf**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,mf/(m1/t)))))) )) \n",
+    "                *Yequil(t,m1)*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)/t**2 \n",
+    "                + t*kd*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1),\n",
+    "                -(quantity*(integrate.quad(lambda s_tilda: sigma(s_tilda)* (s_tilda-s0)* np.sqrt(s_tilda)*\n",
+    "                special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*( 1/(8* m1**2 * m2**2  *(m1/t) \n",
+    "                *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )*(Y1*Y2-Yequil(t,m1)*Yequil(t2,m2))/t**2\n",
+    "                -(quantity*(integrate.quad(lambda s_tilda: sigma_SCALAR(s_tilda,m,m2)* (s_tilda-s0)*\n",
+    "                np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0, np.inf )[0])*\n",
+    "                ( 1/(8* m1**2 * m2**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,m2/(m1/t)))))) )\n",
+    "                *(Y2**2-Yequil(t2,m2)*Yequil(t2,m2))/t**2       \n",
+    "                -(quantity*(integrate.quad(lambda s_tilda: sigma_SCAT(s_tilda)* (s_tilda-s0_SCAT)*\n",
+    "                np.sqrt(s_tilda)* special.kv(1,np.sqrt(s_tilda)/(m1/t)), s0_SCAT, np.inf )[0])*\n",
+    "                ( 1/(8* m1**2 * mf**2  *(m1/t) *(special.kn(2,m1/(m1/t))*(special.kn(2,mf/(m1/t)))))) ) \n",
+    "                *Yequil(t2,m2)*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)/t**2 \n",
+    "                - t*kd*(Y2-(Yequil(t2,m2)/Yequil(t,m1))*Y1)]       \n",
     "\n",
     "\n",
     "# I HAVE INSERT THE WHOLE INTEGRAL FOR GETTING THE COANNIHILATION CROSS SECTION INSIDE THE FORMULA\n",
