--- a/iDM-freze-out/relevant-codes/sin_chi.ipynb
+++ b/iDM-freze-out/relevant-codes/sin_chi.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "eaee11f9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "c19f1af9",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "0.1203116022873493"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,19 +71,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4f656ed2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m1 = 0.050                                #GeV DM Mass\n",
+    "delta=0.3*m1\n",
+    "m2=m1+delta\n",
+    "\n",
+    "mzprime=3*m1                                  #Mass of the dark photon in GeV    150 MeV\n",
+    "Mp = 1.22e19   \n",
+    "m=0.000501                                 # I choose the electron mass in Gev\n",
+    "mf=0.000501 \n",
+    "mmu=0.1057                                 # mass of the muon in GeV\n",
+    "\n",
+    "\n",
+    "s0= m1**2 + m2**2 + 2*m1*m2\n",
+    "s0_SCAT= m1**2 + mf**2 + 2*m1*mf\n",
+    "\n",
+    "\n",
+    "\n",
+    "epsilon=1E-3               # Has inside some factors as indicated in the computation papers     1E-4\n",
+    "alpha_dark=1E-1               # what values?       (1E-3    -   1E-1)  \n",
+    "alpha_em=1/137\n",
+    "\n",
+    "\n",
+    "theta_W=29\n",
+    "mass_Z=91.1876   # GeV\n",
+    "g_W=0.641\n",
+    "chi=epsilon/np.cos(theta_W)\n",
+    "\n",
+    "mu_squared=(mzprime**2)/(mass_Z**2)\n",
+    "\n",
+    "tan_2beta= (np.sin(theta_W)*np.sin(chi)*np.cos(chi))/((np.cos(chi)**2)-(np.sin(chi)**2)*(np.sin(theta_W)**2)-(mu_squared)) \n",
+    "beta=0.5*np.arctan(tan_2beta)\n",
+    "d_V_l= ((g_W)/(2*np.cos(theta_W)))*((3/2)*np.cos(beta)*np.sin(theta_W)*np.tan(chi)-np.sin(beta)*(2*(np.sin(theta_W)**2)-(1/2)))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1b910c56",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0000015902671036"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((np.cos(beta)**2)/(np.cos(chi)**2))"
+   ]
   }
  ],
  "metadata": {
