--- a/iDM-freze-out/relevant-codes/sin_chi.ipynb
+++ b/iDM-freze-out/relevant-codes/sin_chi.ipynb
@@ -120,6 +120,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "95a0a4e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0000007951332357"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((np.cos(beta))/(np.cos(chi)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "1b910c56",
    "metadata": {},
@@ -137,6 +158,126 @@
    ],
    "source": [
     "((np.cos(beta)**2)/(np.cos(chi)**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "972b6d8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0004435735009141385"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((np.sin(beta))/(np.cos(chi)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f39fa2ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.9675745071322526e-07"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((np.sin(beta)**2)/(np.cos(chi))**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "860e7f50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vevfi=0.5\n",
+    "vevh=246\n",
+    "mfi=1\n",
+    "mhiggs=125\n",
+    "lambdafihiggs=1E-6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ad5e32cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.872503840245774e-09"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tan2thetascalar= (lambdafihiggs*vevh*vevfi)/((mhiggs)**2-(mfi)**2)\n",
+    "tan2thetascalar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "77679b31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.936251920122887e-09"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta_scalar=0.5*np.arctan(tan2thetascalar)\n",
+    "theta_scalar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "493c8377",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.936251920122887e-09\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sin(theta_scalar))\n",
+    "print(np.cos(theta_scalar))"
    ]
   },
   {
